Add extra testing options
Flake8 should be a bit more strict, but also compatable with black.

The pre-commit hooks should let me know if I'm trying to do anything wonky.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,3 +4,10 @@ repos:
     hooks:
     - id: black
       language_version: python3.7
+-   repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v2.2.3
+    hooks:
+    - id: flake8
+    - id: debug-statements
+    - id: check-case-conflict
+    - id: check-added-large-files
