Update travis-ci build
differences.py is having trouble finding the input files, so I helped a little.

Since parse.py keeps failing with "cannot import input.structures", try running it as a module instead.

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,12 +27,12 @@ matrix:
     - name: "differences.py"
       python: 3.7
       env:
-        - TEST_CMD="python input/differences.py"
+        - TEST_CMD="python -m input.differences"
     - name: "Parse"
       python: 3.7
       env:
-        - TEST_CMD="python input/parse.py"
+        - TEST_CMD="python -m input.parse"
     - name: "Structures"
       python: 3.7
       env:
-        - TEST_CMD="python input/structures.py"
+        - TEST_CMD="python -m input.structures"
